trying to fix wrapping with white-space

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -77,7 +77,8 @@ pre {
   background: #f8f8f8;
   border-radius:5px;
   border:1px solid #e5e5e5;
-  overflow-x: clip;
+  overflow-x: auto;
+  white-space: pre-wrap;
 }
 
 table {
